fixed background on about-me, portfolio, skills, testimonials and testimonals scrollbar

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -9,24 +9,24 @@
   font-size: $font-size-base;
   scroll-margin-top: $anchor-padding;
   max-width: 1920px;
-  width: 100%;
+  width: 100%; 
   margin-left: auto;
   margin-right: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   box-sizing: border-box;
 }
 
 .background-image {
   position: absolute;
-  top: 1000px;
+  top: 5%;
   right: -200px;
   width: 472px;
   height: auto;
   z-index: 2;
   opacity: 0.7;
-  overflow-x: hidden;
   pointer-events: none;
 }
+
 
 .about-me-left {
   width: 50%;
