--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,31 @@
 .animate-on-scroll {
-    opacity: 0;
-    transform: translateY(50px);
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-  }
-  
-  .visible {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+app-about-me {
+  position: relative;
+  z-index: 3;
+  overflow: hidden;
+}
+
+app-skills {
+  position: relative;
+  z-index: 3;
+  overflow: hidden;
+}
+
+app-testimonials {
+  position: relative;
+  z-index: 3;
+  overflow: hidden;
+  height: 100%;
+}
+
+
