--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables.scss";
 
 .portfolio-section {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -8,13 +9,13 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  overflow: visible;
   scroll-margin-top: $anchor-padding;
-  z-index: -1;
+  z-index: 4;
   max-width: 1920px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .background-image {
@@ -23,7 +24,7 @@
   left: -250px;
   width: 400px;
   height: auto;
-  z-index: -1;
+  z-index: 2;
   opacity: 0.7;
 }
 
