--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -24,7 +24,7 @@ a {
 
 .background-image {
   position: absolute;
-  top: 2150px;
+  top: 290px;
   left: -550px;
   width: 460px;
   height: auto;
